--- a/src/index.scss
+++ b/src/index.scss
@@ -47,6 +47,14 @@ $secondary: "Raleway", sans-serif;
   margin-bottom: 35px;
 }
 
+@mixin bottomspace-80 {
+  margin-bottom: 80px;
+}
+
+@mixin bottomspace-100 {
+  margin-bottom: 100px;
+}
+
 // ========================== base ==================
 body {
   font-size: 1.6rem;
@@ -98,12 +106,13 @@ nav {
   text-align: center;
   @include bottomspace-35;
   img {
-    margin-bottom: 80px;
+    @include bottomspace-80;
   }
 }
 
 input,
 button {
+  outline: none;
   font-size: 1.6rem;
   letter-spacing: 0.5px;
   width: 95%;
@@ -120,8 +129,10 @@ button {
   background-color: $BrightBlue;
   color: $LightGrayishBlue;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
   transition: all 0.25s ease-in-out;
-  &:hover {
+  &:hover,
+  &:focus {
     opacity: 0.8;
   }
 }
@@ -132,7 +143,7 @@ button {
   width: 95%;
   margin-left: auto;
   margin-right: auto;
-  // outline: 1px solid rebeccapurple;
+  // @include outline;
 }
 
 // Desktop
@@ -188,7 +199,7 @@ button {
     .hero__text {
       max-width: 50%;
       text-align: left;
-      margin-bottom: 100px;
+      @include bottomspace-100;
     }
     form {
       display: flex;
